Added article and section

--- a/index.html
+++ b/index.html
@@ -24,9 +24,34 @@
         </header>
         
         <main>
-            <article>
-                <img src="img/" alt="">
-            </article>
+            <div id="about" class="section">
+                <div class="article">
+                    <h1>Andrii Here!</h1>
+                    <img src="img/me.jpg" alt="me">
+                    <p>
+                        I'm from Ukraine but currently living in Kitchener (ON, Canada) where I pursue my
+                        programming education and career.
+                    </p>
+                    <p> 
+                        My passion for coding started when I was in the middle school: I was into robotics
+                        back then and I needed to write simple programs to make my Lego robots do what was intended. Since then I've
+                        participated in multiple coding contests from school to national level working both solo and in teams of peers. I wanted
+                        to take my programming career to a new level, so now I'm studying in the KW region that is famous for the variety of
+                        startups born there and a great tech community.
+                    </p>
+                </div>
+            </div>
+            <div id="projects" class="section">
+                <h1>Projects</h1>
+                <div class="article">
+                    <h1>Launchio</h1>
+                    <img src="img/launchio.png" alt="launchio">
+                    <p>
+                        Launch.io is a solution that our team came up with on the Space Apps Hackathon 2018. The app was made with Python, its
+                        purpose is to make rocket launch information convinient and user friendly.
+                    </p>
+                </div>
+            </div>
         </main>
         
         <footer>
