Added contact links

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Page Title</title>
+        <title>ANDREYDEN</title>
         <link rel="stylesheet" type="text/css" href="css/variables.css">
         <link rel="stylesheet" type="text/css" href="css/main.css">
     </head>
@@ -41,6 +41,7 @@
                     </p>
                 </div>
             </div>
+
             <div id="projects" class="section">
                 <h1>Projects</h1>
                 <div class="article">
@@ -50,6 +51,37 @@
                         Launch.io is a solution that our team came up with on the Space Apps Hackathon 2018. The app was made with Python, its
                         purpose is to make rocket launch information convinient and user friendly.
                     </p>
+                </div>
+            </div>
+
+            <div id="events" class="section">
+                <h1>Events and Competitions</h1>
+                <div class="article">
+                    <h1>Launchio</h1>
+                    <img src="img/launchio.png" alt="launchio">
+                    <p>
+                        Launch.io is a solution that our team came up with on the Space Apps Hackathon 2018. The app was made with
+                        Python, its
+                        purpose is to make rocket launch information convinient and user friendly.
+                    </p>
+                </div>
+            </div>
+
+            <div id="contacts" class="section">
+                <h1>Contact Me</h1>
+                <div class="grid">
+                    <a href="https://github.com/ANDREYDEN" target="_blank" class="cell">
+                        <img src="img/logos/github.png" alt="github">
+                    </a>
+                    <a href="https://www.facebook.com/profile.php?id=100009060491417" target="_blank" class="cell">
+                        <img src="img/logos/facebook.png" alt="facebook">
+                    </a>
+                    <a href="https://www.linkedin.com/in/andrii-denysenko-52176716b/" target="_blank" class="cell">
+                        <img src="img/logos/linkedin.png" alt="linkedin">
+                    </a>
+                    <a href="https://twitter.com/CuteManhole" target="_blank" class="cell">
+                        <img src="img/logos/twitter.jpg" alt="twitter" style="border-radius: 8px;">
+                    </a>
                 </div>
             </div>
         </main>
