Added responsiveness + ES6 styling

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <header class="container">
             <img id="logo" alt="logo" src="img/logo.png">
             <div class="container" id="nav">
-                <button id="previous" class="btn"></button>
-                <button id="next" class="btn"></button> 
+                <button class="btn navigation">
+                    &#128072<pointer id="previous"></pointer>
+                </button>
+                <button class="btn navigation">
+                    <pointer id="next"></pointer>&#128073
+                </button> 
             </div>
         </header>
         
