Styled buttons + more responsiveness

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <link rel="icon" href="img/logo.png">
-        <link href="https://fonts.googleapis.com/css?family=Quicksand|Roboto+Mono|Roboto+Slab&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto+Slab&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="css/main.css"> 
         <link rel="stylesheet" type="text/css" href="css/buttons.css"> 
@@ -18,11 +18,11 @@
         <header class="container">
             <img id="logo" alt="logo" src="img/logo.png">
             <div class="container" id="nav">
-                <button class="btn navigation">
-                    &#128072<pointer id="previous"></pointer>
+                <button class="btn" id="previous">
+                    &#128072 <label></label>
                 </button>
-                <button class="btn navigation">
-                    <pointer id="next"></pointer>&#128073
+                <button class="btn" id="next">
+                    <label></label> &#128073
                 </button> 
             </div>
         </header>
