Added new logo + home link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <header class="container">
-            <img id="logo" alt="logo" src="img/logo.png">
+            <img id="logo" src="img/logo.svg" alt="logo">
             <div class="container" id="nav">
                 <button class="btn" id="previous">
                     &#128072 <label></label>
