Added content to each section

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <body>
         <header class="container">
             <img id="logo" src="img/logo.svg" alt="logo">
-            <div class="container" id="nav">
+            <nav class="container">
                 <button class="btn" id="previous">
                     &#128072 <label></label>
                 </button>
                 <button class="btn" id="next">
                     <label></label> &#128073
                 </button> 
-            </div>
+            </nav>
         </header>
         
         <main>
