Fixed navigation and scrolling bug

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
             <img id="logo" src="img/logo.svg" alt="logo">
             <nav class="container">
                 <button class="btn" id="previous">
-                    &#128072 <label></label>
+                    <b><--</b> <label></label>
                 </button>
                 <button class="btn" id="next">
-                    <label></label> &#128073
+                    <label></label> <b>--></b>
                 </button> 
             </nav>
         </header>
