--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="Description" content="Andrii Denysenko's portfolio.">
         
         <link rel="icon" href="img/logo.png">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto+Slab&display=swap" rel="stylesheet">
@@ -36,21 +37,19 @@
         </main>
         
         <footer>
-            <div id="contacts" class="section">
-                <div class="container" id="contacts">
-                    <a href="https://github.com/ANDREYDEN" target="_blank" class="cell">
-                        <img src="img/logos/github.png" alt="github">
-                    </a>
-                    <a href="https://www.linkedin.com/in/andrii-denysenko-52176716b/" target="_blank" class="cell">
-                        <img src="img/logos/linkedin.png" alt="linkedin">
-                    </a>
-                    <a href="https://www.facebook.com/profile.php?id=100009060491417" target="_blank" class="cell">
-                        <img src="img/logos/facebook.png" alt="facebook">
-                    </a>
-                    <a href="https://twitter.com/CuteManhole" target="_blank" class="cell">
-                        <img src="img/logos/twitter.png" alt="twitter" style="border-radius: 8px;">
-                    </a>
-                </div>
+            <div class="container" id="contacts">
+                <a href="https://github.com/ANDREYDEN" target="_blank" class="cell" rel="noopener">
+                    <img src="img/logos/github.png" alt="github">
+                </a>
+                <a href="https://www.linkedin.com/in/andrii-denysenko-52176716b/" target="_blank" class="cell" rel="noopener">
+                    <img src="img/logos/linkedin.png" alt="linkedin">
+                </a>
+                <a href="https://www.facebook.com/profile.php?id=100009060491417" target="_blank" class="cell" rel="noopener">
+                    <img src="img/logos/facebook.png" alt="facebook">
+                </a>
+                <a href="https://twitter.com/CuteManhole" target="_blank" class="cell" rel="noopener">
+                    <img src="img/logos/twitter.png" alt="twitter" style="border-radius: 8px;">
+                </a>
             </div>
             <p id="copy"></p>
         </footer>
