Added button attention on first visit

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
         <script src="js/main.js"></script>
         <title>Portfolio</title>
     </head>
+
     <body>
         <header class="container">
             <img id="logo" src="img/logo.svg" alt="logo">
             <nav class="container">
-                <button class="btn" id="previous">
+                <button class="btn glowing" id="previous">
                     <b><--</b> <label></label>
                 </button>
-                <button class="btn" id="next">
+                <button class="btn glowing" id="next">
                     <label></label> <b>--></b>
                 </button> 
             </nav>
