--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     <body>
         <header class="container">
             <img id="logo" src="img/logo.svg" alt="logo">
-            <nav class="container">
-                <button class="btn glowing" id="previous">
-                    <b><--</b> <label></label>
-                </button>
-                <button class="btn glowing" id="next">
-                    <label></label> <b>--></b>
-                </button> 
+            <nav>
+                <div id="nav-buttons" class="container">
+                    <button class="btn glowing" id="previous">
+                        <b><--</b> <label></label>
+                    </button>
+                    <button class="btn glowing" id="next">
+                        <label></label> <b>--></b>
+                    </button> 
+                </div>
+                <ul id="content-list"></ul>
             </nav>
         </header>
         
