Added bottom button

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <p id="post-date"></p>
                 <div id="post-content" class="container"></div>
             </div>
+            <button id="next-article" class="btn">Next Project <b>--></b></button>
         </main>
         
         <footer>
