Add font weight variants

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="description" content="Andrii Denysenko's personal portfolio. This page contains a collection of software development projects.">
 
     <link rel="icon" href="img/logo.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Mono|Roboto+Slab&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Mono:wght@400;700&family=Roboto+Slab&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
