Add article metadata

--- a/index.html
+++ b/index.html
@@ -47,7 +47,23 @@
         <div id="post" class="container">
             <h1 id="post-title"></h1>
             <p id="post-date"></p>
+            <h3 id="post-links">
+                <a id="github-link" 
+                    href="" 
+                    target="_blank" 
+                    rel="noopener">
+                    GitHub <img src="img/logos/github.png" alt="github" />
+                </a> |
+                <a id="demo-link" href="" target="_blank" rel="noopener">Try it Out</a>
+            </h3>
+
             <div id="post-content" class="container"></div>
+
+            <h2>What's inside</h2>
+            <h3>Languages</h3>
+            <ul id="post-languages"></ul>
+            <h3>Frameworks and other tech</h3>
+            <ul id="post-tech"></ul>
         </div>
         <button id="next-article" class="btn">Next Project <b>--></b></button>
     </main>
@@ -84,6 +100,21 @@
             <div class="indicators"></div>
             <button class="btn next-slide">--&gt</button>
         </div>
+    </template>
+
+    <template id="project-post">
+        <h1 id="post-title"></h1>
+        <p id="post-date"></p>
+        <h3 id="post-links">
+            <a id="gihub-link" 
+                href="https://github.com/ANDREYDEN/statera" 
+                target="_blank" 
+                rel="noopener">
+                GitHub <img src="img/logos/github.png" alt="github" />
+            </a> |
+            <a id="demo-link" href="https://statera-0.web.app/" target="_blank" rel="noopener">Try it Out</a>
+        </h3>
+        <div id="post-content" class="container">
     </template>
 </body>
 
