Style post footer

--- a/index.html
+++ b/index.html
@@ -59,11 +59,19 @@
 
             <div id="post-content" class="container"></div>
 
-            <h2>What's inside</h2>
-            <h3>Languages</h3>
-            <ul id="post-languages"></ul>
-            <h3>Frameworks and other tech</h3>
-            <ul id="post-tech"></ul>
+            <div id="post-footer">
+                <h2>What's inside</h2>
+                <div id="langs-and-frameworks">
+                    <div>
+                        <h3>Languages</h3>
+                        <ul id="post-languages"></ul>
+                    </div>
+                    <div>
+                        <h3>Frameworks and other tech</h3>
+                        <ul id="post-tech"></ul>
+                    </div>
+                </div>
+            </div>
         </div>
         <button id="next-article" class="btn">Next Project <b>--></b></button>
     </main>
