--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <a id="demo-link" href="" target="_blank" rel="noopener">Try it Out</a>
             </h3>
 
+            <img src="" alt="thumbnail" id="post-thumbnail">
             <div id="post-content" class="container"></div>
 
             <div id="post-footer">
