Extract post rendering logic into custom component

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/buttons.css">
-    <link rel="stylesheet" type="text/css" href="css/post.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/flocking.js"></script>
 
     <script src="data/components/image-carousel.js"></script>
+    <script src="data/components/project-post.js"></script>
 
     <title>Portfolio</title>
 </head>
@@ -40,40 +40,11 @@
     <ul id="content-list" class="nav"></ul>
 
     <header class="container">
-        <img id="logo" src="img/logo.svg" alt="logo" onclick="renderArticle(SEQUENCE[0])">
+        <img id="logo" src="img/logo.svg" alt="logo" onclick="renderArticle('profile')">
     </header>
 
     <main>
-        <div id="post" class="container">
-            <h1 id="post-title"></h1>
-            <p id="post-date"></p>
-            <h3 id="post-links">
-                <a id="github-link" 
-                    href="" 
-                    target="_blank" 
-                    rel="noopener">
-                    GitHub <img src="img/logos/github.png" alt="github" />
-                </a> |
-                <a id="demo-link" href="" target="_blank" rel="noopener">Try it Out</a>
-            </h3>
-
-            <img src="" alt="thumbnail" id="post-thumbnail">
-            <div id="post-content" class="container"></div>
-
-            <div id="post-footer">
-                <h2>What's inside</h2>
-                <div id="langs-and-frameworks">
-                    <div>
-                        <h3>Languages</h3>
-                        <ul id="post-languages"></ul>
-                    </div>
-                    <div>
-                        <h3>Frameworks and other tech</h3>
-                        <ul id="post-tech"></ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div id="content"></div>
         <button id="next-article" class="btn">Next Project <b>--></b></button>
     </main>
 
@@ -112,18 +83,41 @@
     </template>
 
     <template id="project-post">
-        <h1 id="post-title"></h1>
-        <p id="post-date"></p>
-        <h3 id="post-links">
-            <a id="gihub-link" 
-                href="https://github.com/ANDREYDEN/statera" 
-                target="_blank" 
-                rel="noopener">
-                GitHub <img src="img/logos/github.png" alt="github" />
-            </a> |
-            <a id="demo-link" href="https://statera-0.web.app/" target="_blank" rel="noopener">Try it Out</a>
-        </h3>
-        <div id="post-content" class="container">
+        <div id="post" class="container">
+            <h1 id="post-title"></h1>
+            <p id="post-date"></p>
+            <h3 id="post-links">
+                <a id="github-link" 
+                    href="" 
+                    target="_blank" 
+                    rel="noopener">
+                    GitHub <img src="img/logos/github.png" alt="github" />
+                </a> |
+                <a id="demo-link" href="" target="_blank" rel="noopener">Try it Out</a>
+            </h3>
+
+            <img src="" alt="thumbnail" id="post-thumbnail">
+
+            <div id="post-content" class="container">
+                <h2>In a Nutshell</h2>
+                <p><i id="post-description"></i></p>
+
+                <div id="post-footer">
+                    <h2>What's inside</h2>
+                    <div id="langs-and-frameworks">
+                        <div>
+                            <h3>Languages</h3>
+                            <ul id="post-languages"></ul>
+                        </div>
+                        <div>
+                            <h3>Frameworks and other tech</h3>
+                            <ul id="post-tech"></ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </template>
 </body>
 
