Switch navigation to links

--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
 <body>
     <div id="background"></div>
     <!-- Fixed Navigation -->
-    <button class="nav btn" id="previous">
+    <a class="nav btn" id="previous">
         <b><--</b> <label></label>
-    </button>
-    <button class="nav btn" id="next">
+    </a>
+    <a class="nav btn" id="next">
         <label></label> <b>--></b>
-    </button>
+    </a>
     <ul id="content-list" class="nav"></ul>
 
     <header class="container">
@@ -54,7 +54,7 @@
 
     <main>
         <div id="content"></div>
-        <button id="next-article" class="btn">Next Project <b>--></b></button>
+        <a id="next-article" class="btn">Next Project <b>--></b></a>
     </main>
 
     <footer>
