Add animation toggle

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <label></label> <b>--></b>
     </a>
     <ul id="content-list" class="nav"></ul>
+    <button id="animation-toggle" class="btn">An.</button>
 
     <header class="container">
         <img id="logo" src="img/logo.svg" alt="logo" width="75px" height="75px" onclick="renderArticle('profile')">
