Fix profile mobile view

--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
 
     <div id="page-content">
         <header class="container">
-            <img id="logo" src="img/logo.svg" alt="logo" width="75px" height="75px" onclick="renderArticle('profile')">
+            <a href="/#profile">
+                <img id="logo" src="img/logo.svg" alt="logo" width="75px" height="75px" onclick="renderArticle('profile')">
+            </a>
         </header>
 
         <main>
