Improve mobile version

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <span></span> <b>--></b>
     </a>
     <ul popover id="content-list" class="nav"></ul>
-    <button popovertarget="content-list" id="content-list-button" class="btn">&#x2630</button>
-    <button id="settings-button" class="btn">
+    <button popovertarget="content-list" id="content-list-button" class="btn fixed-icon-button">&#x2630</button>
+    <button id="settings-button" class="btn fixed-icon-button">
         <img src="img/icons/settings.svg" alt="settings" width="32px" height="32px">
     </button>
     <dialog id="settings">
