--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
         <span></span> <b>--></b>
     </a>
     <ul popover id="content-list" class="nav"></ul>
-    <button popovertarget="content-list" id="content-list-button" class="btn fixed-icon-button">&#x2630</button>
-    <button id="settings-button" class="btn fixed-icon-button">
+    <button popovertarget="content-list" id="content-list-button" class="btn icon-button">&#x2630</button>
+    <button id="settings-button" class="btn icon-button">
         <img src="img/icons/settings.svg" alt="settings" width="32px" height="32px">
     </button>
+    <button id="up-button" class="btn icon-button">^</button>
     <dialog id="settings">
         <div id="dialog-body">
             <h1>Settings</h1>
