--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     href="" 
                     target="_blank" 
                     rel="noopener">
-                    GitHub <img src="img/logos/github.png" alt="github" />
+                    GitHub <img src="img/logos/github.png" alt="GitHub logo" />
                 </a> |
                 <a id="demo-link" href="" target="_blank" rel="noopener">Try it Out</a>
             </h3>
